--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "node-modules": "^1.0.1",
     "chroma-js": "^2.1.0",
+    "firebase": "^7.15.0",
+    "node-modules": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
