--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "chroma-js": "^2.1.0",
+    "moment": "^2.26.0",
     "node-modules": "^1.0.1",
     "react": "^16.13.1",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
