--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "moment": "^2.26.0",
     "node-modules": "^1.0.1",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
